// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SearchScreen button is disabled when input is empty 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "height": 71,
        "paddingBottom": 28,
        "paddingTop": 28,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Avenir Next",
          "fontSize": 15,
          "fontWeight": "500",
          "textAlign": "center",
          "width": 750,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
          }
        }
      >
        Enter Ticker Symbol
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="characters"
        editable={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="VOO"
        placeholderTextColor="#E5E5E5"
        rejectResponderTermination={true}
        style={
          Object {
            "borderColor": "#B2B2B2",
            "borderRadius": 3,
            "borderWidth": 1,
            "fontFamily": "Avenir Next",
            "fontSize": 28,
            "fontWeight": "600",
            "height": 108,
            "lineHeight": 40,
            "marginBottom": 28,
            "marginTop": 28,
            "paddingBottom": 28,
            "paddingTop": 28,
            "textAlign": "center",
            "width": "80%",
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#E5E5E5",
          "opacity": 1,
          "padding": 26,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
            "textAlign": "center",
          }
        }
      >
        GO
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test SearchScreen button is disabled when input is empty 2`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "height": 71,
        "paddingBottom": 28,
        "paddingTop": 28,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Avenir Next",
          "fontSize": 15,
          "fontWeight": "500",
          "textAlign": "center",
          "width": 750,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
          }
        }
      >
        Enter Ticker Symbol
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="characters"
        editable={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="VOO"
        placeholderTextColor="#E5E5E5"
        rejectResponderTermination={true}
        style={
          Object {
            "borderColor": "#B2B2B2",
            "borderRadius": 3,
            "borderWidth": 1,
            "fontFamily": "Avenir Next",
            "fontSize": 28,
            "fontWeight": "600",
            "height": 108,
            "lineHeight": 40,
            "marginBottom": 28,
            "marginTop": 28,
            "paddingBottom": 28,
            "paddingTop": 28,
            "textAlign": "center",
            "width": "80%",
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#000000",
          "opacity": 1,
          "padding": 26,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
            "textAlign": "center",
          }
        }
      >
        GO
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test SearchScreen button is disabled when input is empty 3`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "height": 71,
        "paddingBottom": 28,
        "paddingTop": 28,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Avenir Next",
          "fontSize": 15,
          "fontWeight": "500",
          "textAlign": "center",
          "width": 750,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
          }
        }
      >
        Enter Ticker Symbol
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="characters"
        editable={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="VOO"
        placeholderTextColor="#E5E5E5"
        rejectResponderTermination={true}
        style={
          Object {
            "borderColor": "#B2B2B2",
            "borderRadius": 3,
            "borderWidth": 1,
            "fontFamily": "Avenir Next",
            "fontSize": 28,
            "fontWeight": "600",
            "height": 108,
            "lineHeight": 40,
            "marginBottom": 28,
            "marginTop": 28,
            "paddingBottom": 28,
            "paddingTop": 28,
            "textAlign": "center",
            "width": "80%",
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#E5E5E5",
          "opacity": 1,
          "padding": 26,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
            "textAlign": "center",
          }
        }
      >
        GO
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test SearchScreen input style 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "height": 71,
        "paddingBottom": 28,
        "paddingTop": 28,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Avenir Next",
          "fontSize": 15,
          "fontWeight": "500",
          "textAlign": "center",
          "width": 750,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
          }
        }
      >
        Enter Ticker Symbol
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="characters"
        editable={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="VOO"
        placeholderTextColor="#E5E5E5"
        rejectResponderTermination={true}
        style={
          Object {
            "borderColor": "#B2B2B2",
            "borderRadius": 3,
            "borderWidth": 1,
            "fontFamily": "Avenir Next",
            "fontSize": 28,
            "fontWeight": "600",
            "height": 108,
            "lineHeight": 40,
            "marginBottom": 28,
            "marginTop": 28,
            "paddingBottom": 28,
            "paddingTop": 28,
            "textAlign": "center",
            "width": "80%",
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#E5E5E5",
          "opacity": 1,
          "padding": 26,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
            "textAlign": "center",
          }
        }
      >
        GO
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test SearchScreen input style 2`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "height": 71,
        "paddingBottom": 28,
        "paddingTop": 28,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Avenir Next",
          "fontSize": 15,
          "fontWeight": "500",
          "textAlign": "center",
          "width": 750,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
          }
        }
      >
        Enter Ticker Symbol
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="characters"
        editable={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="VOO"
        placeholderTextColor="#E5E5E5"
        rejectResponderTermination={true}
        style={
          Object {
            "borderColor": "#000000",
            "borderRadius": 3,
            "borderWidth": 1,
            "fontFamily": "Avenir Next",
            "fontSize": 28,
            "fontWeight": "600",
            "height": 108,
            "lineHeight": 40,
            "marginBottom": 28,
            "marginTop": 28,
            "paddingBottom": 28,
            "paddingTop": 28,
            "textAlign": "center",
            "width": "80%",
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#E5E5E5",
          "opacity": 1,
          "padding": 26,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
            "textAlign": "center",
          }
        }
      >
        GO
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test SearchScreen input style 3`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "height": 71,
        "paddingBottom": 28,
        "paddingTop": 28,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Avenir Next",
          "fontSize": 15,
          "fontWeight": "500",
          "textAlign": "center",
          "width": 750,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
          }
        }
      >
        Enter Ticker Symbol
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="characters"
        editable={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="VOO"
        placeholderTextColor="#E5E5E5"
        rejectResponderTermination={true}
        style={
          Object {
            "borderColor": "#B2B2B2",
            "borderRadius": 3,
            "borderWidth": 1,
            "fontFamily": "Avenir Next",
            "fontSize": 28,
            "fontWeight": "600",
            "height": 108,
            "lineHeight": 40,
            "marginBottom": 28,
            "marginTop": 28,
            "paddingBottom": 28,
            "paddingTop": 28,
            "textAlign": "center",
            "width": "80%",
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#E5E5E5",
          "opacity": 1,
          "padding": 26,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Avenir Next",
            "fontSize": 17,
            "fontWeight": "600",
            "textAlign": "center",
          }
        }
      >
        GO
      </Text>
    </View>
  </View>
</View>
`;
